@@ -1,3 +1,7 @@
+2006-01-24  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* UnixMarshal.cs (StringToHeap): Check for null arguments.
+
 2006-01-20  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* UnixDriveInfo.cs: Properties should generate an InvalidOperationException,
